--- a/css/styles.css
+++ b/css/styles.css
@@ -7,16 +7,25 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 body {
   font-family: 'Roboto', sans-serif;
   color: #333;
   line-height: 1.6;
   margin: 0;
+  overflow: hidden;
 }
 
-/*最外层容器样式*/
+.outer {
+  width: 1000px;
+  height: 1000px;
+  position: relative; /* 确保 .outer 是定位上下文 */
+  transform-style: preserve-3d; /* 保持 3D 变换 */
+  perspective: 1000px; /* 可选：添加透视效果 */
+}
+
+/* 最外层容器样式 */
 .wrap {
-  position: relative;
   position: absolute;
   top: 0;
   right: 0;
@@ -26,19 +35,20 @@ body {
   height: 200px;
   margin: auto;
   min-width: 100vw;
-  /*改变左右上下,图片方块移动*/
+  /* 改变左右上下,图片方块移动 */
 }
 
-/*包裹所有容器样式*/
+/* 包裹所有容器样式 */
 .cube {
   width: 200px;
   height: 200px;
   margin: 0 auto;
   transform-style: preserve-3d;
-  transform: rotateX(-30deg) rotateY(-80deg);
-  -webkit-animation: rotate 20s infinite;
-  /*匀速*/
+  /* 匀速 */
   animation-timing-function: linear;
+  z-index: 100;
+  transform: rotateX(-30deg) rotateY(-80deg); /* 初始旋转角度 */
+  -webkit-animation: rotate 20s infinite;
   z-index: 100;
 }
 
@@ -60,7 +70,7 @@ body {
   transition: all .4s;
 }
 
-/*定义所有图片样式*/
+/* 定义所有图片样式 */
 .pic {
   width: 200px;
   height: 200px;
@@ -90,9 +100,9 @@ body {
   transform: rotateX(-90deg) translateZ(100px);
 }
 
-/*定义小正方体样式*/
+/* 定义小正方体样式 */
 .cube span {
-  display: bloack;
+  display: block;
   width: 100px;
   height: 100px;
   position: absolute;
@@ -129,7 +139,7 @@ body {
   transform: rotateX(-90deg) translateZ(50px);
 }
 
-/*鼠标移入后样式*/
+/* 鼠标移入后样式 */
 .cube:hover .out_front {
   transform: rotateY(0deg) translateZ(200px);
 }
@@ -172,7 +182,6 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   z-index: 1000;
-
 }
 
 /* 现有的CSS内容 */
@@ -196,38 +205,57 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   z-index: 1000;
-  opacity: 1; /* 默认完全不透明 */
-  transition: opacity 3s ease-in-out; /* 设置过渡效果 */
+  opacity: 1;
+  /* 默认完全不透明 */
+  transition: opacity 3s ease-in-out;
+  /* 设置过渡效果 */
 }
 
 /* 定义淡出动画 */
 @keyframes fadeOut {
-  from { opacity: 1; }
-  to { opacity: 0; }
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
 }
 
 .fade-out {
   animation-name: fadeOut;
-  animation-duration: 3s; /* 动画持续时间 */
-  animation-timing-function: ease-in-out; /* 动画速度曲线 */
-  animation-fill-mode: forwards; /* 动画结束后保持最后一帧的状态 */
+  animation-duration: 3s;
+  /* 动画持续时间 */
+  animation-timing-function: ease-in-out;
+  /* 动画速度曲线 */
+  animation-fill-mode: forwards;
+  /* 动画结束后保持最后一帧的状态 */
 }
 
 canvas {
   /* position: fixed; */
   background-color: transparent;
-  z-index: 1500
+  z-index: 1500;
 }
 
 .modal {
-  display: none;
   position: fixed;
-  top: 10%;
-  left: 10%;
-  width: 80%;
-  height: 80%;
-  background-color: rgba(0, 0, 0, 0);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* 背景颜色和透明度 */
+  text-align: center;
   z-index: 999;
+  padding: 20px; /* 内边距 */
+  box-sizing: border-box; /* 确保内边距和边框包含在宽度和高度内 */
+}
+
+.modal-image {
+  margin-top: 50%;
+  max-width: 100%;
+  border-radius: 10px; /* 可选：添加圆角 */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* 可选：添加阴影 */
 }
 
 footer {
@@ -242,25 +270,10 @@ footer {
 
 footer p {
   margin: 0.5rem 0;
-  
 }
 
 footer a:hover {
   text-decoration: underline;
-}
-
-.modal-image {
-  margin: auto;
-  max-width: 100%;
-  max-height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-size: 24px;
-  cursor: pointer;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 audio {
@@ -269,7 +282,7 @@ audio {
 
 /* 文字点击后的烟雾消散效果 */
 .smoke-effect {
-  font-size: 20px;
+  font-size: 28px;
   cursor: pointer;
   letter-spacing: 6px;
   position: absolute;
@@ -277,19 +290,24 @@ audio {
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 20px;
-  background-color: rgba(255, 255, 255, 0.3); /* 半透明白色背景 */
-  backdrop-filter: blur(10px); /* 模糊背景 */
+  background-color: rgba(255, 255, 255, 0.1);
+  /* 半透明白色背景 */
+  backdrop-filter: blur(5px);
+  /* 模糊背景 */
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   color: #3b98e4;
   text-align: center;
-  width: 40%; /* 根据需要调整宽度 */
+  width: 40%;
+  /* 根据需要调整宽度 */
   max-width: 600px;
   font-family: 'Roboto', sans-serif;
   line-height: 1.8;
   opacity: 0.8;
-  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3); /* 较轻的文本阴影 */
-  -webkit-text-stroke: 1px rgb(154, 45, 227); /* 设置文本描边 */
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
+  /* 较轻的文本阴影 */
+  -webkit-text-stroke: 1px rgb(203, 148, 239);
+  /* 设置文本描边 */
 }
 
 .smoke-effect span {
@@ -299,24 +317,55 @@ audio {
 
 .smoke-effect.fade-out span {
   opacity: 0;
-  transform: translateY(-20px) ; /* 向上移动并旋转 rotate(360deg)*/
+  transform: translateY(-20px);
+  /* 向上移动并旋转 rotate(360deg) */
 }
 
 /* 动画延迟，使字符依次消失 */
-.smoke-effect.fade-out span:nth-child(1) { animation-delay: 0s; }
-.smoke-effect.fade-out span:nth-child(2) { animation-delay: 0.1s; }
-.smoke-effect.fade-out span:nth-child(3) { animation-delay: 0.2s; }
-.smoke-effect.fade-out span:nth-child(4) { animation-delay: 0.3s; }
-.smoke-effect.fade-out span:nth-child(5) { animation-delay: 0.4s; }
-.smoke-effect.fade-out span:nth-child(6) { animation-delay: 0.5s; }
-.smoke-effect.fade-out span:nth-child(7) { animation-delay: 0.6s; }
-.smoke-effect.fade-out span:nth-child(8) { animation-delay: 0.7s; }
-.smoke-effect.fade-out span:nth-child(9) { animation-delay: 0.8s; }
-.smoke-effect.fade-out span:nth-child(10) { animation-delay: 0.9s; }
+.smoke-effect.fade-out span:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.smoke-effect.fade-out span:nth-child(2) {
+  animation-delay: 0.1s;
+}
+
+.smoke-effect.fade-out span:nth-child(3) {
+  animation-delay: 0.2s;
+}
+
+.smoke-effect.fade-out span:nth-child(4) {
+  animation-delay: 0.3s;
+}
+
+.smoke-effect.fade-out span:nth-child(5) {
+  animation-delay: 0.4s;
+}
+
+.smoke-effect.fade-out span:nth-child(6) {
+  animation-delay: 0.5s;
+}
+
+.smoke-effect.fade-out span:nth-child(7) {
+  animation-delay: 0.6s;
+}
+
+.smoke-effect.fade-out span:nth-child(8) {
+  animation-delay: 0.7s;
+}
+
+.smoke-effect.fade-out span:nth-child(9) {
+  animation-delay: 0.8s;
+}
+
+.smoke-effect.fade-out span:nth-child(10) {
+  animation-delay: 0.9s;
+}
 
 @keyframes smokeDisappear {
   to {
     opacity: 0;
-    transform: translateY(-20px); /* 向上移动并旋转  rotate(360deg)*/
+    transform: translateY(-20px);
+    /* 向上移动并旋转  rotate(360deg) */
   }
 }
